--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
         "test": "node --experimental-vm-modules node_modules/.bin/jest"
     },
     "dependencies": {
+        "axios": "^0.27.2",
         "js-crypto-hmac": "^1.0.4",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "tslint": "^6.1.3"
     },
     "devDependencies": {
         "@types/jest": "^27",
