--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "test": "node --experimental-vm-modules node_modules/.bin/jest"
     },
     "dependencies": {
+        "js-crypto-hmac": "^1.0.4",
         "reflect-metadata": "^0.1.13"
     },
     "devDependencies": {
