--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@types/jest": "^27",
         "@wasm-tool/wasm-pack-plugin": "^1.4.0",
+        "dotenv-webpack": "^7.1.0",
         "jest": "^27",
         "ts-jest": "^27",
         "ts-loader": "9.2.3",
