--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "axios": "^0.27.2",
         "js-crypto-hmac": "^1.0.4",
         "reflect-metadata": "^0.1.13",
-        "tslint": "^6.1.3"
+        "tslint": "^6.1.3",
+        "web-streams-polyfill": "^3.2.1"
     },
     "devDependencies": {
         "@types/jest": "^27",
