--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "axios": "^0.27.2",
         "js-crypto-hmac": "^1.0.4",
+        "leb128": "^0.0.5",
         "reflect-metadata": "^0.1.13",
         "tslint": "^6.1.3"
     },
