--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "types": "dist/lib.d.ts",
     "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>",
     "scripts": {
-        "test": "node --experimental-vm-modules node_modules/.bin/jest"
+        "test": "jest"
     },
     "dependencies": {
         "@ccor/hello-wasm": "^0.1.0",
@@ -16,7 +16,8 @@
         "js-crypto-hmac": "^1.0.4",
         "leb128": "^0.0.5",
         "reflect-metadata": "^0.1.13",
-        "tslint": "^6.1.3"
+        "tslint": "^6.1.3",
+        "cover_crypt": "^3.0.1"
     },
     "devDependencies": {
         "@types/jest": "^27",
