--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -1,13 +1,10 @@
 name: NodeJS with Jest
 
-# Triggers the workflow on push or pull request events
-on: [push, pull_request]
-
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
