--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cosmian_js_lib",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "license": "MIT",
     "description": "Cosmian javascript client library",
     "main": "dist/lib.js",
@@ -8,13 +8,16 @@
     "types": "dist/lib.d.ts",
     "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>",
     "scripts": {
-        "test": "node --experimental-vm-modules node_modules/.bin/jest"
+        "test": "jest"
     },
     "dependencies": {
         "@ccor/hello-wasm": "^0.1.0",
+        "abe_gpsw": "^0.8.0",
         "axios": "^0.27.2",
+        "cover_crypt": "^3.1.0",
         "js-crypto-hmac": "^1.0.4",
         "leb128": "^0.0.5",
+        "cosmian_findex": "^0.4.0",
         "reflect-metadata": "^0.1.13",
         "tslint": "^6.1.3"
     },
