--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ stages:
   - prebuild
   - build
   - publish
+  - deploy
 
 tslint:
   stage: prebuild
@@ -28,6 +29,7 @@ tslint:
   allow_failure: true
 
 .services:
+  stage: build
   services:
     - name: postgres
       alias: db
@@ -37,43 +39,42 @@ tslint:
     - apt update && apt install -y postgresql libpq-dev
     - export PGPASSWORD=$POSTGRES_PASSWORD
     - psql -h localhost -U "$POSTGRES_USER" -d "$POSTGRES_DB" -f ./dump_db_demo.sql
+  script:
+    - npm install
+    - npm test
 
 build_node_12:
   extends: .services
-  stage: build
   image: node:12
-  script:
-    - npm install
-    - npm test
 
 build_node_14:
   extends: .services
-  stage: build
   image: node:14
-  script:
-    - npm install
-    - npm test
 
 build_node_16:
   extends: .services
-  stage: build
   image: node:16
-  script:
-    - npm install
-    - npm test
 
 build_node_18:
   extends: .services
-  stage: build
   image: node:18
-  script:
-    - npm install
-    - npm test
 
 publish:
   stage: publish
   script:
     - echo "//registry.npmjs.org/:_authToken=$NPM_ACCESS_TOKEN" > ~/.npmrc
     - npm publish
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/'
+
+deploy:
+  image: docker:19.03.15
+  stage: deploy
+  script:
+    - ssh cosmian@demo-cloudproof.cosmian.com 'mv ~/demo_cloudproof/frontend.tar ~/demo_cloudproof/frontend.tar.old'
+    - docker build -f Dockerfile -t frontend .
+    - docker save frontend > frontend.tar
+    - scp docker-compose.yml frontend.tar run-demo.sh dump_db_demo.sql cosmian@demo-cloudproof.cosmian.com:~/demo_cloudproof/
+    - ssh cosmian@demo-cloudproof.cosmian.com 'bash ~/demo_cloudproof/run-demo.sh'
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/'
