--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cosmian_js_lib",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "license": "MIT",
     "description": "Cosmian javascript client library",
     "main": "dist/lib.js",
@@ -8,28 +8,25 @@
     "types": "dist/lib.d.ts",
     "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>",
     "scripts": {
-        "test": "jest"
+        "test": "NODE_OPTIONS=\"--max-http-header-size=128000\" jest"
     },
     "dependencies": {
-        "@ccor/hello-wasm": "^0.1.0",
         "abe_gpsw": "^2.0.1",
         "axios": "^0.27.2",
+        "cosmian_findex": "^0.4.1",
         "cover_crypt": "^6.0.1",
         "js-crypto-hmac": "^1.0.4",
-        "leb128": "^0.0.5",
-        "cosmian_findex": "^0.4.0",
-        "reflect-metadata": "^0.1.13",
-        "tslint": "^6.1.3"
+        "leb128": "0.0.5",
+        "reflect-metadata": "^0.1.13"
     },
     "devDependencies": {
-        "@types/jest": "^27",
-        "@wasm-tool/wasm-pack-plugin": "^1.4.0",
-        "jest": "^27",
-        "ts-jest": "^27",
-        "ts-loader": "9.2.3",
-        "typescript": "^4.3.2",
-        "webpack": "^5.38.1",
-        "webpack-cli": "^4.9.2",
+        "@types/jest": "^29.0.0",
+        "jest": "^28.1.3",
+        "ts-jest": "^28.0.8",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.8.2",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^3.11.3"
     }
 }
