--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
     },
     "devDependencies": {
         "@types/jest": "^29.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.36.2",
+        "eslint": "^8.23.1",
+        "eslint-config-standard-with-typescript": "^22.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsdoc": "^39.3.6",
+        "eslint-plugin-n": "^15.2.5",
+        "eslint-plugin-promise": "^6.0.1",
         "jest": "^28.1.3",
         "ts-jest": "^28.0.8",
         "ts-loader": "^9.3.1",
-        "typescript": "^4.8.2",
+        "typescript": "^4.8.3",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^3.11.3"
