--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cosmian_js_lib",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "license": "MIT",
     "description": "Cosmian javascript client library",
     "main": "dist/lib.js",
@@ -11,20 +11,22 @@
         "test": "NODE_OPTIONS=\"--max-http-header-size=128000\" jest"
     },
     "dependencies": {
+        "@types/uuid": "^8.3.4",
         "abe_gpsw": "^2.0.1",
         "axios": "^0.27.2",
         "cosmian_findex": "^0.4.1",
         "cover_crypt": "^6.0.1",
         "js-crypto-hmac": "^1.0.4",
         "leb128": "0.0.5",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/jest": "^29.0.0",
         "jest": "^28.1.3",
         "ts-jest": "^28.0.8",
         "ts-loader": "^9.3.1",
-        "typescript": "^4.8.2",
+        "typescript": "^4.8.3",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^3.11.3"
