--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "devDependencies": {
         "@types/jest": "^29.0.0",
+        "@types/node": "^18.7.18",
         "jest": "^28.1.3",
         "ts-jest": "^28.0.8",
         "ts-loader": "^9.3.1",
