--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,12 @@ variables:
   PGRST_DB_SCHEMA: public
   PGRST_DB_ANON_ROLE: app_user
   PGRST_OPENAPI_SERVER_PROXY_URI: http://localhost:3000
+  # KMS
+  COSMIAN_SERVER_URL: http://localhost:9998
+  KMS_PUBLIC_PATH: /tmp
+  KMS_PRIVATE_PATH: /tmp
+  KMS_SHARED_PATH: /tmp
+
 
 stages:
   - prebuild
@@ -35,6 +41,9 @@ tslint:
       alias: db
     - name: postgrest/postgrest
       alias: server
+    - name: gitlab.cosmian.com:5000/core/kms:2.2.0_ci
+      alias: kms_ci
+    - redis:latest
   before_script:
     - apt update && apt install -y postgresql libpq-dev
     - export PGPASSWORD=$POSTGRES_PASSWORD
@@ -81,3 +90,4 @@ deploy:
     - ssh cosmian@demo-cloudproof.cosmian.com 'bash ~/demo_cloudproof/run-demo.sh'
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/'
+  when: manual
