fixing the demo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "deserialization",
         "Deserialization",
         "Kmip",
-        "Ttlv"
+        "Ttlv",
+        "webassembly"
     ]
 }
