working on deserialization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "deserialization",
         "Deserialization",
         "Kmip",
+        "ttlv",
         "Ttlv"
     ],
     "eslint.format.enable": true
