--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ variables:
 stages:
   - prebuild
   - build
+  - pack
   - publish
   - deploy
 
@@ -72,6 +73,19 @@ build_node_16:
 build_node_18:
   extends: .test
   image: node:18
+
+pack:
+  stage: pack
+  before_script:
+    - apt-get update
+    - apt-get install -y git
+  script:
+    - git archive --verbose --format=zip --output=${CI_PROJECT_NAME}_${CI_COMMIT_TAG}.zip HEAD
+  artifacts:
+    name: '${CI_PROJECT_NAME}_${CI_COMMIT_TAG}'
+    paths:
+      - ${CI_PROJECT_NAME}_${CI_COMMIT_TAG}.zip
+    expire_in: 3 mos
 
 publish:
   stage: publish
