--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "jest": "^28.1.3",
         "prettier": "2.7.1",
         "redis": "^4.3.1",
+        "sqlite3": "^5.1.2",
         "ts-jest": "^28.0.8",
         "ts-loader": "^9.3.1",
         "typescript": "^4.8.3",
