access policies and user decryption keys

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
     "cSpell.words": [
+        "cosmian",
         "deserialization",
         "Deserialization",
         "kmip",
         "Kmip",
         "ttlv",
-        "Ttlv"
+        "Ttlv",
+        "webassembly"
     ],
     "eslint.format.enable": true,
     "jestrunner.jestCommand": "node --experimental-fetch --experimental-vm-modules node_modules/.bin/jest"
