--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dependencies": {
         "@types/uuid": "^8.3.4",
         "cosmian_abe_gpsw": "^2.0.2",
-        "cosmian_cover_crypt": "^6.0.5",
+        "cosmian_cover_crypt": "6.0.7",
         "cosmian_findex": "^0.7.1",
         "js-crypto-hmac": "^1.0.4",
         "leb128": "0.0.5",
