--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -8,6 +8,7 @@
     "src/crypto/abe/core/hybrid_crypto/worker", // import.meta.url not allowed
     "src/site",
     "node_modules",
-    "**/__tests__/*"
+    "**/__tests__/*",
+    "tests/**/*.test.ts"
   ]
 }
