--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "dom.iterable",
       "es2020",
     ], /* Specify library files to be included in the compilation. */
-    "allowJs": true,                             /* Allow javascript files to be compiled. */
+    "allowJs": true, /* Allow javascript files to be compiled. */
     // "checkJs": true,                             /* Report errors in .js files. */
     // "jsx": "preserve",                           /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
     "declaration": true, /* Generates corresponding '.d.ts' file. */
@@ -80,6 +80,7 @@
   "exclude": [
     "node_modules",
     "**/__tests__/*",
-    "tests/wasm_lib"
+    "tests/wasm_lib",
+    "tests/**/*.test.ts"
   ]
 }
