--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "cloudproof_js",
-    "version": "3.1.1",
+    "version": "3.2.0",
     "license": "MIT",
-    "description": "Cosmian javascript client library",
+    "description": "Cosmian Cloudproof javascript client library",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
-    "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>",
+    "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>, Emmanuel Coste<emmanuel.coste@cosmian.com>, Thibaud Dauce<thibaud.dauce@cosmian.com>",
     "files": [
         "dist"
     ],
