--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "lint:fix": "npm run lint -- --fix",
         "prettier": "npx prettier src tests --check",
         "prettier:fix": "npm run prettier -- --write",
-        "format": "npm run prettier:fix && npm run lint:fix"
+        "format": "npm run prettier:fix && npm run lint:fix",
     },
     "dependencies": {
         "@types/uuid": "^8.3.4",
