--- a/tsconfig-esm.json
+++ b/tsconfig-esm.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
-    "outDir": "./dist/cjs"
+    "module": "ES2020",
+    "outDir": "./dist"
   },
   "exclude": [
     "src/crypto/abe/core/hybrid_crypto/worker", // import.meta.url not allowed
