--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "3.2.0",
     "license": "MIT",
     "description": "Cosmian Cloudproof javascript client library",
-    "main": "dist/index.js",
-    "module": "dist/index.js",
+    "main": "dist/src/index.js",
+    "module": "dist/src/index.js",
     "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>, Emmanuel Coste<emmanuel.coste@cosmian.com>, Thibaud Dauce<thibaud.dauce@cosmian.com>",
     "files": [
         "dist"
