--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     ],
     "scripts": {
         "prepare": "rm -rf dist && tsc -p tsconfig-esm.json",
-        "test": "NODE_OPTIONS=\"--max-http-header-size=128000\" jest",
+        "test": "jest",
         "lint": "npx eslint src tests",
         "lint:fix": "npm run lint -- --fix",
         "prettier": "npx prettier src tests --check",
@@ -33,7 +33,6 @@
         "@types/jest": "^29.0.0",
         "@types/node": "^18.7.18",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
-        "axios": "^0.27.2",
         "eslint": "^8.23.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard-with-typescript": "^22.0.0",
