--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
     "name": "cloudproof_js",
-    "version": "3.1.1",
+    "version": "3.2.0",
     "license": "MIT",
-    "description": "Cosmian javascript client library",
-    "main": "dist/cjs/index.js",
-    "module": "dist/esm/index.js",
-    "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>",
+    "description": "Cosmian Cloudproof javascript client library",
+    "main": "dist/src/index.js",
+    "module": "dist/src/index.js",
+    "author": "Bruno Grieder<bruno.grieder@cosmian.com>, Pauline Hochard<pauline.hochard@cosmian.com>, Emmanuel Coste<emmanuel.coste@cosmian.com>, Thibaud Dauce<thibaud.dauce@cosmian.com>",
     "files": [
         "dist"
     ],
     "scripts": {
-        "prepare": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
-        "test": "NODE_OPTIONS=\"--max-http-header-size=128000\" jest",
+        "prepare": "rm -rf dist && tsc -p tsconfig-esm.json",
+        "test": "jest",
         "lint": "npx eslint src tests",
         "lint:fix": "npm run lint -- --fix",
         "prettier": "npx prettier src tests --check",
@@ -33,7 +33,6 @@
         "@types/jest": "^29.0.0",
         "@types/node": "^18.7.18",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
-        "axios": "^0.27.2",
         "eslint": "^8.23.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard-with-typescript": "^22.0.0",
