--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     },
     "dependencies": {
         "@types/uuid": "^8.3.4",
-        "cosmian_cover_crypt": "^6.0.8",
-        "cosmian_findex": "^0.8.0",
+        "cosmian_cover_crypt": "file:../cover_crypt/pkg/bundler",
+        "cosmian_findex": "file:../findex/pkg/bundler",
         "js-crypto-hmac": "^1.0.4",
         "leb128": "0.0.5",
         "process": "^0.11.10",
