--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@types/uuid": "^8.3.4",
+        "byte-base64": "^1.1.0",
         "cosmian_cover_crypt": "file:../cover_crypt/pkg/bundler",
         "cosmian_findex": "file:../findex/pkg/bundler",
         "js-crypto-hmac": "^1.0.4",
