--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,14 @@ build_node_18:
   extends: .test
   image: node:18
 
+cloudproof_js_demo:
+  stage: prebuild
+  # stage: pack
+  script:
+    # - npm install
+    - git clone git@gitlab.cosmian.com:core/cloudproof_js_demo.git
+    - cd cloudproof_js_demo
+
 pack:
   stage: pack
   before_script:
