--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,8 +49,7 @@ build_node_18:
   image: node:18
 
 cloudproof_js_demo:
-  stage: prebuild
-  # stage: pack
+  stage: pack
   script:
     - npm install
     - git clone http://gitlab.cosmian.com/core/cloudproof_js_demo.git
