--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,7 @@ cloudproof_js_demo:
     - npm install -g typescript
   script:
     - npm install
-    - git clone http://gitlab.cosmian.com/core/cloudproof_js_demo.git
+    - git clone --branch fix/packaging http://gitlab.cosmian.com/core/cloudproof_js_demo.git
     - cd cloudproof_js_demo
     - npm install | true
     - npm install .. --save
