--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,8 +57,9 @@ cloudproof_js_demo:
     - npm install
     - git clone --branch fix/packaging http://gitlab.cosmian.com/core/cloudproof_js_demo.git
     - cd cloudproof_js_demo
-    - npm install || true
+    # - npm install || true
     - npm install .. --save
+    - cat package.json
     - npx webpack
   allow_failure: true
 
