--- a/tsconfig-esm.json
+++ b/tsconfig-esm.json
@@ -4,10 +4,13 @@
     "module": "ES2020",
     "outDir": "./dist"
   },
-  "include": ["."],
+  "include": [
+    "."
+  ],
   "exclude": [
     "node_modules",
     "**/__tests__/*",
-    "tests"
+    "tests",
+    "examples",
   ]
 }
