Add E2E tests on VueJS demo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,9 @@ example_vuejs:
     - cd examples/vuejs
     - npm install
     - npm run build
+    - cd dist
+    - python -m http.server&
+    - node ../test/chrome.mjs
 
 example_reactjs:
   stage: test
