--- a/examples/vuejs/package.json
+++ b/examples/vuejs/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
+    "puppeteer": "^19.2.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vue-tsc": "^0.40.7"
