Update ReactJS demo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ example_vuejs:
     - npm run build
     - cd dist
     - python -m http.server&
-    - node ../test/chrome.mjs
+    - node ../../test/chrome.mjs
 
 example_reactjs:
   stage: test
@@ -65,6 +65,9 @@ example_reactjs:
     - cd examples/reactjs
     - npm install
     - npm run build
+    - cd build
+    - python -m http.server&
+    - node ../../test/chrome.mjs
 
 pack:
   stage: pack
