--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ stages:
       alias: kms_ci
     - redis:latest
   before_script:
+    - node --version
+    - npm --version
     - npm install
 
 .test:
