--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "eslint-plugin-promise": "^6.0.1",
         "jest": "^28.1.3",
         "prettier": "2.7.1",
+        "puppeteer": "^19.2.0",
         "redis": "^4.3.1",
         "sqlite3": "^5.1.2",
         "ts-jest": "^28.0.8",
