--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node:16
+image: node:18
 
 variables:
   SCCACHE_DIR: ${CI_PROJECT_DIR}/.cache/sccache
@@ -33,8 +33,7 @@ eslint:
     - npm run format
   allow_failure: true
 
-build_node_18:
-  image: node:18
+build:
   stage: build
   extends: .services
   script:
@@ -43,6 +42,7 @@ build_node_18:
 example_vuejs:
   stage: test
   script:
+    - npm install
     - cd examples/vuejs
     - npm install
     - npm run build
@@ -53,6 +53,7 @@ example_vuejs:
 example_reactjs:
   stage: test
   script:
+    - npm install
     - cd examples/reactjs
     - npm install
     - npm run build
