--- a/examples/vuejs/package.json
+++ b/examples/vuejs/package.json
@@ -2,6 +2,7 @@
   "name": "vue-project",
   "version": "0.0.0",
   "scripts": {
+    "serve": "http-server dist",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
@@ -17,6 +18,7 @@
     "@types/node": "^16.11.56",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/tsconfig": "^0.1.3",
+    "http-server": "^14.1.1",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^19.2.0",
     "typescript": "~4.7.4",
