--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+---
 image: node:18
 
 variables:
@@ -28,7 +29,6 @@ eslint:
   stage: test
   script:
     - npm run format
-  allow_failure: true
 
 build:
   stage: test
@@ -39,7 +39,10 @@ build:
 example_vuejs:
   stage: test
   script:
-    - apt update && apt install -y gconf-service libgbm-dev libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
+    - apt update && apt install -y gconf-service libgbm-dev libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1
+      libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1
+      libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3
+      lsb-release xdg-utils wget
     - npm install
     - cd examples/vuejs
     - npm install
@@ -50,13 +53,24 @@ example_vuejs:
 example_reactjs:
   stage: test
   script:
-    - apt update && apt install -y gconf-service libgbm-dev libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
+    - apt update && apt install -y gconf-service libgbm-dev libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1
+      libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1
+      libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3
+      lsb-release xdg-utils wget
     - npm install
     - cd examples/reactjs
     - npm install
     - npm run build
     - npm run serve&
     - node ../test/chrome.mjs
+
+example_webpack:
+  extends: .services
+  stage: test
+  script:
+    - cd examples/webpack
+    - npm install
+    - npx webpack
 
 pack:
   stage: pack
@@ -66,12 +80,12 @@ pack:
   script:
     - git archive --verbose --format=zip --output=${CI_PROJECT_NAME}_${CI_COMMIT_TAG}.zip HEAD
   artifacts:
-    name: '${CI_PROJECT_NAME}_${CI_COMMIT_TAG}'
+    name: ${CI_PROJECT_NAME}_${CI_COMMIT_TAG}
     paths:
       - ${CI_PROJECT_NAME}_${CI_COMMIT_TAG}.zip
     expire_in: 3 mos
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/'
+    - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
 
 publish:
   stage: publish
@@ -82,4 +96,4 @@ publish:
     - echo "//registry.npmjs.org/:_authToken=$NPM_ACCESS_TOKEN" > ~/.npmrc
     - npm publish
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/'
+    - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
