--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "scripts": {
         "prepare": "rm -rf dist && tsc --version && tsc -p tsconfig-esm.json",
         "test": "jest",
-        "lint": "npx eslint src tests",
+        "lint": "npx eslint src",
         "lint:fix": "npm run lint -- --fix",
         "prettier": "npx prettier src tests --check",
         "prettier:fix": "npm run prettier -- --write",
@@ -50,6 +50,6 @@
         "uuid": "^9.0.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^3.11.3"
+        "webpack-dev-server": "^4.11.1"
     }
 }
