--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,7 +51,7 @@ repos:
     hooks:
       - id: prettier
         types_or: [css, javascript, jsx, ts, markdown, bash, sh]
-        args: [--trailing-comma=none]
+        args: [--semi=false]
 
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.27.0
