Add back publish demo

--- a/examples/reactjs/package.json
+++ b/examples/reactjs/package.json
@@ -18,7 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "serve": "http-server --port 8090 build",
+    "serve": "http-server build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
