--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,8 +47,8 @@ example_vuejs:
     - cd examples/vuejs
     - npm install
     - npm run build
-    - npm run serve&
-    - node ../test/chrome.mjs
+    - npm run serve -- --port 8090 &
+    - node ../test/chrome.mjs http://localhost:8090
   artifacts:
     paths:
       - examples/vuejs/error.png
@@ -65,8 +65,8 @@ example_reactjs:
     - cd examples/reactjs
     - npm install
     - npm run build
-    - npm run serve&
-    - node ../test/chrome.mjs
+    - npm run serve -- --port 8090 &
+    - node ../test/chrome.mjs http://localhost:8090
   artifacts:
     paths:
       - examples/reactjs/error.png
@@ -105,3 +105,16 @@ publish:
     - npm publish
   rules:
     - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
+
+deploy:
+  image: docker:19.03.15
+  stage: publish
+  script:
+    - ssh cosmian@demo-cloudproof.cosmian.com 'mv ~/demo_cloudproof/demo.tar ~/demo_cloudproof/demo.tar.old'
+    - docker build -f demo/Dockerfile -t demo .
+    - docker save demo > demo/demo.tar
+    - scp demo/* cosmian@demo-cloudproof.cosmian.com:~/demo_cloudproof/
+    - ssh cosmian@demo-cloudproof.cosmian.com 'bash ~/demo_cloudproof/run.sh'
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
+  when: manual
