--- a/examples/vuejs/package.json
+++ b/examples/vuejs/package.json
@@ -2,7 +2,7 @@
   "name": "vue-project",
   "version": "0.0.0",
   "scripts": {
-    "serve": "http-server --port 8090 dist",
+    "serve": "http-server dist",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
