Fix random errors on CI (#60)
* Try to fix the CI

* Retry to count selector multiple times to avoid random errors

* Do not add all untracked files but only error.png

* Try again to load the page

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,10 @@ example_vuejs:
     - npm run build
     - npm run serve&
     - node ../test/chrome.mjs
+  artifacts:
+    paths:
+      - examples/vuejs/error.png
+    expire_in: 1 week
 
 example_reactjs:
   extends: .services
@@ -63,6 +67,10 @@ example_reactjs:
     - npm run build
     - npm run serve&
     - node ../test/chrome.mjs
+  artifacts:
+    paths:
+      - examples/reactjs/error.png
+    expire_in: 1 week
 
 example_webpack:
   extends: .services
