--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ example_vuejs:
     - npm install
     - npm run build
     - npm run serve -- --port 8090 &
-    - node ../test/chrome.mjs http://localhost:8090
+    - node ../test/chrome.mjs http://localhost:8090 http://localhost:9998
   artifacts:
     paths:
       - examples/vuejs/error.png
@@ -66,7 +66,7 @@ example_reactjs:
     - npm install
     - npm run build
     - npm run serve -- --port 8090 &
-    - node ../test/chrome.mjs http://localhost:8090
+    - node ../test/chrome.mjs http://localhost:8090 http://localhost:9998
   artifacts:
     paths:
       - examples/reactjs/error.png
