--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ example_vuejs:
     - npm install
     - npm run build
     - npm run serve -- --port 8090 &
+    - sleep 5
     - node ../test/chrome.mjs http://localhost:8090 http://localhost:9998
   artifacts:
     paths:
@@ -67,6 +68,7 @@ example_reactjs:
     - npm install
     - npm run build
     - npm run serve -- --port 8090 &
+    - sleep 5
     - node ../test/chrome.mjs http://localhost:8090 http://localhost:9998
   artifacts:
     paths:
