--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,6 @@ variables:
   KMS_PUBLIC_PATH: /tmp
   KMS_PRIVATE_PATH: /tmp
   KMS_SHARED_PATH: /tmp
-  CI_DEBUG_SERVICES: "true"
 
 stages:
   - test
@@ -110,16 +109,15 @@ publish:
     - npm publish
   rules:
     - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
-
-deploy:
-  image: docker:19.03.15
-  stage: publish
-  script:
-    - ssh cosmian@demo-cloudproof.cosmian.com 'mv ~/demo_cloudproof/demo.tar ~/demo_cloudproof/demo.tar.old'
-    - docker build -f demo/Dockerfile -t demo .
-    - docker save demo > demo/demo.tar
-    - scp demo/* cosmian@demo-cloudproof.cosmian.com:~/demo_cloudproof/
-    - ssh cosmian@demo-cloudproof.cosmian.com 'bash ~/demo_cloudproof/run.sh'
-  rules:
-    - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
-  when: manual
+# deploy:
+#   image: docker:19.03.15
+#   stage: publish
+#   script:
+#     - ssh cosmian@demo-cloudproof.cosmian.com 'mv ~/demo_cloudproof/demo.tar ~/demo_cloudproof/demo.tar.old'
+#     - docker build -f demo/Dockerfile -t demo .
+#     - docker save demo > demo/demo.tar
+#     - scp demo/* cosmian@demo-cloudproof.cosmian.com:~/demo_cloudproof/
+#     - ssh cosmian@demo-cloudproof.cosmian.com 'bash ~/demo_cloudproof/run.sh'
+#   rules:
+#     - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
+#   when: manual
