--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   kms:
-    image: gitlab.cosmian.com:5000/core/kms:3.0.1_ci
+    image: cosmian/kms:3.0.1
     environment:
       - KMS_HOSTNAME=0.0.0.0
       - KMS_PUBLIC_PATH=/tmp
