--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "sqlite3": "^5.1.2",
         "ts-jest": "^28.0.8",
         "ts-loader": "^9.3.1",
-        "typescript": "^4.8.3",
+        "typescript": "4.8.4",
         "uuid": "^9.0.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
