--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,3 +121,20 @@ deploy:
   # rules:
   #   - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
   when: manual
+
+check_deploy:
+  needs:
+    - deploy
+  extends: .services
+  stage: publish
+  script:
+    - apt update && apt install -y gconf-service libgbm-dev libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1
+      libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1
+      libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libappindicator1 libnss3
+      lsb-release xdg-utils wget
+    - node ../test/chrome.mjs https://demo-cloudproof.cosmian.com/ https://demo-cloudproof.cosmian.com/kms/kmip/2_1
+  artifacts:
+    paths:
+      - error.png
+    when: on_failure
+    expire_in: 1 week
