--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,9 +112,8 @@ deploy:
     - docker save demo > demo/demo.tar
     - scp demo/docker-compose.yml demo/demo.tar demo/run.sh cosmian@demo-cloudproof.cosmian.com:~/demo_cloudproof/
     - ssh cosmian@demo-cloudproof.cosmian.com 'bash ~/demo_cloudproof/run.sh'
-  # rules:
-  #   - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
-  when: manual
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v\d+.\d+.\d+$/
 
 check_deploy:
   image: gitlab.cosmian.com:5000/core/ci-puppeteer:latest
